<resources>
    <string name="app_name">DiscoveriTunes_0.2</string>

    <string name="itunes_search">Search tracks</string>
    <string name="start_searchingBtn">Start</string>
    <string name="hint_searchBar">Start searching!</string>
    <string name="btn_searchBtn">Search</string>
    <string name="trackname">Track name</string>
    <string name="trackprice">Track price</string>
    <string name="shortdescriptionkind">Short description</string>
    <string name="artistName">Artist Name</string>

    <string-array name="entities_array">
        <item>movie</item>
        <item>album</item>
        <item>allArtist</item>
        <item>podcast</item>
        <item>musicVideo</item>
        <item>mix</item>
        <item>audiobook</item>
        <item>tvSeason</item>
        <item>allTrack</item>
    </string-array>
</resources>
