<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.discoveritunes_02.view.SearchActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/m_toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueA700_toolBar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/m_toolBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itunes_search"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:layout_marginRight="10dp"/>
            <Spinner
                android:id="@+id/m_spinnerTbr"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:visibility="gone"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/m_startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_searchingBtn"
        android:visibility="visible"/>

    <RelativeLayout
        android:id="@+id/m_recyclerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <EditText
            android:id="@+id/m_searchBar"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_searchBar"
            android:textColorHint="@color/hintColor_Gray300"/>

        <Button
            android:id="@+id/m_searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_searchBtn"
            android:layout_toRightOf="@+id/m_searchBar"
            android:layout_alignBottom="@+id/m_searchBar"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/m_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/m_searchBar"/>
    </RelativeLayout>

</LinearLayout>
