<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.daniel.discoveritunes_02.view.DetailsActivity.DetailsActivity">



    <ImageView
        android:id="@+id/d_artworkUrl100"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/dTrackName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trackname"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/dArtistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artistName"
        android:textSize="17sp"
        android:textAlignment="center"
        android:paddingBottom="20dp"/>

    <ScrollView
        android:id="@+id/ad_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/d_longDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shortdescriptionkind"
                android:textAlignment="center"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
