<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/cv_artworkUrl30"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:scaleType="fitXY"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center"
                android:gravity="top|center"
                android:orientation="vertical"
                android:background="#5000">

                <TextView
                    android:id="@+id/cv_trackName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trackname"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"
                    android:gravity="top|center"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"/>


                <TextView
                    android:id="@+id/cv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trackprice"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="top|center"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/cv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shortdescriptionkind"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="top|center"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </FrameLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>